scripts/envoy/envoy-ssl.yaml
static_resources:

  listeners:
  - name: listener_hanaeco
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/proxy-test"
                direct_response:
                  status: 200
                  body:
                    inline_string: "Envoy: Hanaeco"
              - match:
                  prefix: "/bapi/"
                route:
                  timeout: 120s
                  prefix_rewrite: "/"
                  cluster: hanaeco-server
              - match:
                  prefix: "/"
                route:
                  prefix_rewrite: "/"
                  # host_rewrite_literal: api-portal.net
                  cluster: hanaeco-web
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                # This causes invalid path, symbolic link doesnt seem to work
                # filename: /etc/certs/live/hanaeco.dev/fullchain.pem
                filename: /etc/certs/archive/hanaeco.dev/fullchain1.pem
              private_key:
                # filename: /etc/certs/live/hanaeco.dev/privkey.pem
                filename: /etc/certs/archive/hanaeco.dev/privkey1.pem


  clusters:
  - name: hanaeco-web
    connect_timeout: 120s
    type: STRICT_DNS
    # type: STATIC
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: hanaeco-web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hanaeco-web
                port_value: 3000
  - name: hanaeco-server
    connect_timeout: 30s
    type: STRICT_DNS
    # type: STATIC
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: hanaeco-server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hanaeco-server
                port_value: 3000


admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
